# MiseriesOfTheWorld

./: CMakeLists.txt  README.md
Assets/json/: mFonts.json
src/: Remedy.cpp  Remedy.h
src/Game/: AnimateStateMachine.cpp  AnimateStateMachine.h  AnimatedTexture.cpp  AnimatedTexture.h  Assets.cpp  Assets.h  Game.cpp  Game.h  Handler.cpp  Handler.h  InputManager.cpp  InputManager.h  JSONSystem.cpp  JSONSystem.h  Miseries of the world.cpp  Randomizer.cpp  Randomizer.h  Renderer.cpp  Renderer.h  RotateMachine.cpp  RotateMachine.h  Singleton.h  TextureManager.cpp  TextureManager.h
src/Game objets/: FactoryObjects.cpp  FactoryObjects.h  FactoryOfEntities.cpp  FactoryOfEntities.h  FactoryOfFonts.cpp  FactoryOfFonts.h
src/Loger/: Loging.cpp  Loging.h
src/Main Character/: Character.h
src/Math/: Vector2f.cpp  Vector2f.h
src/Physics/: Physics.cpp  Physics.h  SmoothMoving.cpp  SmoothMoving.h
src/Scenes/: FactoryScenes.cpp  FactoryScenes.h  LevelsScenes.cpp  LevelsScenes.h
src/Sound/: AudioSystem.cpp  AudioSystem.h
src/States/: GameStates.h  InGame.cpp  InGame.h  Menu.cpp  Menu.h  Pause.h
src/Time/: AutomaticlyBenchmarker.cpp  AutomaticlyBenchmarker.h  Timer.cpp  Timer.h
src/Weapons/: Boulder.cpp  Boulder.h  Bullets.cpp  Bullets.h  BulletsPool.cpp  BulletsPool.h  BurstMode.cpp  BurstMode.h  FireMode.cpp  FireMode.h  FireModeFactory.cpp  FireModeFactory.h  Gun.cpp  Gun.h  Irregular.cpp  Irregular.h  Knife.cpp  Knife.h  Melee.cpp  Melee.h  Pistol.cpp  Pistol.h  RPG.cpp  RPG.h  ReloadLogic.cpp  ReloadLogic.h  Rifle.cpp  Rifle.h  Shotgun.cpp  Shotgun.h  SingleOrSequence.cpp  SingleOrSequence.h  SpreadMode.cpp  SpreadMode.h  Tango.cpp  Tango.h  Throwable.cpp  Throwable.h  Weapon.cpp  Weapon.h  (+4 more)
